# meshcompute-cpp

./: CMakeLists.txt  README.md
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  jni_bridge.cpp
android/app/src/main/java/com/meshcompute/bot/: BotService.java  MainActivity.java
bot/: bot_handler.cpp  bot_handler.h  main_bot.cpp
common/: CMakeLists.txt  config_manager.cpp  config_manager.h  crypto_utils.cpp  crypto_utils.h  message.cpp  message.h
config/: config.json
controller/: CMakeLists.txt  main.py  main_controller.cpp  mesh_controller.cpp  mesh_controller.h  meshgui.py  requirements.txt
docker/: Dockerfile.bot  Dockerfile.controller  Dockerfile.node  Dockerfile.server  docker-compose.yml
include/meshcompute/api/: event_bus.h
include/meshcompute/compute/: job.h  scheduler.h  task_queue.h  worker.h
include/meshcompute/compute/workers/: crypto_miner_worker.h  llm_worker.h  shell_worker.h
include/meshcompute/core/: identity.h  node_core.h
include/meshcompute/monitoring/: metrics_collector.h
include/meshcompute/network/: peer_manager.h
include/meshcompute/network/discovery/: discovery_protocol.h
include/meshcompute/network/transport/: transport_interface.h
include/meshcompute/security/: channel_encryption.h  key_manager.h
node/: CMakeLists.txt  main_node.cpp  node_core.cpp  node_core.h  peer_manager.cpp  peer_manager.h
node/api/: event_bus.cpp  event_bus.h
node/compute/: job.h  scheduler.cpp  scheduler.h  task_queue.cpp  task_queue.h  worker.cpp  worker.h
node/compute/workers/: crypto_miner_worker.cpp  crypto_miner_worker.h  llm_worker.cpp  llm_worker.h  shell_worker.cpp  shell_worker.h
node/discovery/: discovery_protocol.h  lan_broadcast.cpp  lan_broadcast.h
node/monitoring/: metrics_collector.cpp  metrics_collector.h
node/security/: channel_encryption.cpp  channel_encryption.h  key_manager.cpp  key_manager.h
node/transport/: tcp_transport.cpp  tcp_transport.h  transport_interface.h
scripts/: build_bot_android.sh  build_bot_windows.sh  build_node_android.sh  build_node_linux.sh  build_node_windows.sh  generate_secrets.sh  setup_controller.sh  setup_dependencies.sh  setup_server.sh
server/: CMakeLists.txt  client_handler.cpp  client_handler.h  hub.cpp  hub.h  main_server.cpp
src/: CMakeLists.txt
